[package]
name = "os-checker-plugin-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

cargo_metadata  = "0.19"
duct = "0.13"

camino = "1"
indexmap = { version = "2", features = ["serde"] }

# error handling
eyre = "0.6"
color-eyre = "0.6"

# logger
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"

plugin_cargo = { git = "https://github.com/os-checker/plugin-cargo.git", package = "os-checker-plugin-cargo" }

