[package]
name = "os-checker-plugin-docs"
version = "0.1.1"
edition = "2021"
license = "MIT"
exclude = [".github", "*.json"]
description = """
A plugin for os-checker to generate rustdocs for all checked packages from latest commit.
"""
repository = "https://github.com/os-checker/docs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

cargo_metadata  = "0.19"
duct = "0.13"

camino = "1"
indexmap = { version = "2", features = ["serde"] }

# error handling
eyre = "0.6"
color-eyre = "0.6"

# logger
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"

plugin = { version = "0.1.3", package = "os-checker-plugin" }
# FIXME: 将 Repo 功能移至 plugin，这样就不需要 plugin_cargo
plugin_cargo = { version = "0.1.4", package = "os-checker-plugin-cargo" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

